--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
+    "jest": "^29.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -22,9 +24,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "babel-jest": "^29.0.3",
-    "jest": "^29.0.3",
     "node-fetch": "^3.2.10",
-    "vite": "^3.0.7",
-    "whatwg-fetch": "^3.6.2"
+    "vite": "^3.0.7"
   }
 }
