--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,6 +20,7 @@
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
